--- a/index.html
+++ b/index.html
@@ -1,7 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Mooglics.GitHub.io by mooglics</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Mooglics.GitHub.io</h1>
+        <p>moogle&#39;s blog base on jekyll</p>
+        <p class="view"><a href="https://github.com/mooglics">View the Project on GitHub <small>mooglics</small></a></p>
+        <ul>
+          <li class="single"><a href="https://github.com/mooglics/mooglics.github.io">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>
+<a id="mooglicsgithubio" class="anchor" href="#mooglicsgithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>mooglics.github.io</h1>
+
+<p>moogle's blog base on jekyll</p>
+      </section>
+    </div>
+    <footer>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
 </html>
